--- a/index.html
+++ b/index.html
@@ -217,89 +217,107 @@
             <p>Analytics tools, dashboards, and modeling work.</p>
           </div>
 
-          <div class="grid">
-            <article class="card">
-              <div class="card-top">
-                <h3>NBA Prospect Evaluation Tool</h3>
-                <p class="tag-row">
-                  <span class="tag">R</span>
-                  <span class="tag">Shiny</span>
-                  <span class="tag">Data Viz</span>
-                </p>
+          <div class="projects-grid">
+            <!-- SaaS Growth Analytics Dashboard -->
+            <a
+              class="project-tile"
+              href="https://github.com/rishabhsxngh/saas-growth-analytics-dashboard"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <div class="project-tile__media">
+                <!-- Replace with your screenshot path -->
+                <img src="assets/projects/saas-dashboard.png" alt="SaaS Growth Analytics Dashboard preview" />
               </div>
-              <p class="card-body">
-                Interactive Shiny app for exploring shot quality, shot distribution, and efficiency by zone.
-                Designed for quick scouting-style comparisons and clear storytelling.
-              </p>
-              <div class="card-actions">
-                <a class="link" href="https://github.com/rishabhsxngh/nba-prospect-evaluation-tool" target="_blank" rel="noreferrer">
-                  Code →
-                </a>
-                <a class="link" href="#" aria-disabled="true" title="Add your deployed Shiny link here">
-                  Live demo →
-                </a>
+              <div class="project-tile__overlay">
+                <div class="project-tile__meta">Python • Streamlit • pandas • Plotly</div>
+                <div class="project-tile__title">SaaS Growth Analytics Dashboard</div>
+                <div class="project-tile__desc">
+                  Executive overview with automated insights, cohort retention heatmaps, funnel conversion, MRR waterfall, NRR, and churn risk signals.
+                </div>
+                <div class="project-tile__cta">Open project →</div>
               </div>
-            </article>
+            </a>
 
-            <article class="card">
-              <div class="card-top">
-                <h3>NFL Penalty Margin & Win Analysis</h3>
-                <p class="tag-row">
-                  <span class="tag">R</span>
-                  <span class="tag">Shiny</span>
-                  <span class="tag">Sports Analytics</span>
-                </p>
+            <!-- NBA Prospect Evaluation Tool -->
+            <a
+              class="project-tile"
+              href="https://github.com/rishabhsxngh/nba-prospect-evaluation-tool"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <div class="project-tile__media">
+                <img src="assets/projects/nba-prospect.png" alt="NBA Prospect Evaluation Tool preview" />
               </div>
-              <p class="card-body">
-                Interactive R Shiny dashboard analyzing NFL play-by-play data (2018-2023).
-                Features penalty margin vs win % correlation, z-score outlier detection, and home/away splits across all teams.
-              </p>
-              <div class="card-actions">
-                <a class="link" href="https://github.com/rishabhsxngh/NFL-Analysis" target="_blank" rel="noreferrer">
-                  Code →
-                </a>
+              <div class="project-tile__overlay">
+                <div class="project-tile__meta">R • Shiny • Data Visualization</div>
+                <div class="project-tile__title">NBA Prospect Evaluation Tool</div>
+                <div class="project-tile__desc">
+                  Interactive scouting-style dashboard to explore shot quality, zone efficiency, and player comparisons with clear visual storytelling.
+                </div>
+                <div class="project-tile__cta">View code →</div>
               </div>
-            </article>
+            </a>
 
-            <article class="card">
-              <div class="card-top">
-                <h3>Portfolio Value Creation Dashboard</h3>
-                <p class="tag-row">
-                  <span class="tag">Python</span>
-                  <span class="tag">Finance</span>
-                  <span class="tag">Modeling</span>
-                </p>
+            <!-- NFL Penalty Margin & Win Analysis -->
+            <a
+              class="project-tile"
+              href="https://github.com/rishabhsxngh/NFL-Analysis"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <div class="project-tile__media">
+                <img src="assets/projects/nfl-penalty.png" alt="NFL Penalty Margin and Win Analysis preview" />
               </div>
-              <p class="card-body">
-                Built portfolio analytics dashboard modeling revenue, margin, and EBITDA drivers across product lines.
-                Conducted pricing and cost sensitivity analyses with investor-ready executive summaries.
-              </p>
-              <div class="card-actions">
-                <a class="link" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">
-                  Code →
-                </a>
+              <div class="project-tile__overlay">
+                <div class="project-tile__meta">R • Shiny • Sports Analytics</div>
+                <div class="project-tile__title">NFL Penalty Margin & Win Analysis</div>
+                <div class="project-tile__desc">
+                  Play-by-play analytics (2018–2023) including penalty margin vs win %, z-score outliers, and team-level home/away splits.
+                </div>
+                <div class="project-tile__cta">View code →</div>
               </div>
-            </article>
+            </a>
 
-            <article class="card">
-              <div class="card-top">
-                <h3>Good Karma Engineering</h3>
-                <p class="tag-row">
-                  <span class="tag">Non-Profit</span>
-                  <span class="tag">3D Printing</span>
-                  <span class="tag">Leadership</span>
-                </p>
+            <!-- Portfolio Value Creation Dashboard -->
+            <a
+              class="project-tile"
+              href="https://github.com/rishabhsxngh"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <div class="project-tile__media">
+                <img src="assets/projects/portfolio-vc.png" alt="Portfolio Value Creation Dashboard preview" />
               </div>
-              <p class="card-body">
-                Founded non-profit focused on 3D printing prosthetic limbs.
-                Shipped 50+ fully functional arms and legs to people across the US, England, and India.
-              </p>
-              <div class="card-actions">
-                <a class="link" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">
-                  Learn more →
-                </a>
+              <div class="project-tile__overlay">
+                <div class="project-tile__meta">Python • Finance • Modeling</div>
+                <div class="project-tile__title">Portfolio Value Creation Dashboard</div>
+                <div class="project-tile__desc">
+                  Modeled revenue, margin, and EBITDA drivers across product lines, including pricing and cost sensitivity analyses with investor-style summaries.
+                </div>
+                <div class="project-tile__cta">View project →</div>
               </div>
-            </article>
+            </a>
+
+            <!-- Good Karma Engineering -->
+            <a
+              class="project-tile"
+              href="https://www.linkedin.com/in/rishabhsingh2027"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <div class="project-tile__media">
+                <img src="assets/projects/gke.png" alt="Good Karma Engineering preview" />
+              </div>
+              <div class="project-tile__overlay">
+                <div class="project-tile__meta">Non-profit • Leadership • 3D Printing</div>
+                <div class="project-tile__title">Good Karma Engineering</div>
+                <div class="project-tile__desc">
+                  Founded a non-profit delivering 3D printed prosthetics. Shipped 50+ functional arms and legs across the US, England, and India.
+                </div>
+                <div class="project-tile__cta">Learn more →</div>
+              </div>
+            </a>
           </div>
         </div>
       </section>
@@ -389,44 +407,4 @@
         <div class="container footer-inner">
           <span>© <span id="year"></span> Rishabh Singh</span>
           <span class="footer-right">
-            <a href="#projects">Projects</a>
-            <a href="#experience">Experience</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-            <a href="Singh_Rishabh_Resume(W25).pdf" target="_blank" rel="noreferrer">Resume</a>
-          </span>
-        </div>
-      </footer>
-    </main>
-
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-
-      // Fading headline loop (one-line phrases)
-      const el = document.getElementById("headlineType");
-      const phrases = [
-        "build data pipelines",
-        "build analytics tools",
-        "ship ETL systems",
-        "automate reporting",
-        "turn data into action"
-      ];
-
-      const holdMs = 3200; // longer hold
-      const fadeMs = 350;  // smoother fade
-
-      let i = 0;
-      el.textContent = phrases[i];
-
-      setInterval(() => {
-        el.classList.add("is-fading");
-
-        setTimeout(() => {
-          i = (i + 1) % phrases.length;
-          el.textContent = phrases[i];
-          el.classList.remove("is-fading");
-        }, fadeMs);
-      }, holdMs);
-    </script>
-  </body>
-</html>
+            <a href="#projects">Projects
