--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@
             <p class="kicker">Data Analyst • ETL Pipelines • Analytics Engineering</p>
 
             <!-- FADING HEADER LOOP (ONE LINE, NO WRAP) -->
-            <h1 class="headline">
-              What's up! I'm Rishabh Singh, and I
-              <span class="accent typewrap">
-                <span id="headlineType" class="fade-swap"></span>
-              </span>
-              for data-driven teams.
-            </h1>
+            What's up! I'm Rishabh Singh, and I
+<span class="headline-signal" aria-hidden="true">
+  <span class="sig sig-1"></span>
+  <span class="sig sig-2"></span>
+  <span class="sig sig-3"></span>
+</span>
+<span class="accent typewrap">
+  <span id="headlineType" class="fade-swap"></span>
+</span>
+for data-driven teams.
+
 
             <!-- Recruiter-facing role signal -->
             <p class="roleline">
