--- a/index.html
+++ b/index.html
@@ -40,22 +40,18 @@
           <div>
             <p class="kicker">Data Analyst • ETL Pipelines • Analytics Engineering</p>
 
-            <h1 class="headline">
-              What's up! I'm Rishabh Singh, and I
-              <span class="headline-signal" aria-hidden="true">
-                <span class="sig sig-1"></span>
-                <span class="sig sig-2"></span>
-                <span class="sig sig-3"></span>
-              </span>
-              <span class="accent typewrap">
-                <span
-                  id="headlineType"
-                  class="fade-swap"
-                  data-phrases="build data pipelines|build analytics tools|ship ETL systems|automate reporting workflows|turn data into decisions"
-                ></span>
-              </span>
-              for data-driven teams.
-            </h1>
+           <h1 class="headline">
+  What’s up! I’m Rishabh Singh, and I
+  <span class="accent typewrap">
+    <span
+      id="headlineType"
+      class="fade-swap"
+      data-phrases="build data pipelines|build analytics tools|ship ETL systems|automate reporting workflows|turn data into decisions"
+    ></span>
+  </span>
+  for data-driven teams.
+</h1>
+
 
             <!-- Recruiter-facing role signal -->
             <p class="roleline">
