--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <span
       id="headlineType"
       class="fade-swap"
-      data-phrases="build data pipelines|build analytics tools|ship ETL systems|automate reporting workflows|turn data into decisions"
+      data-phrases="build data pipelines|build analytics tools|ship ETL systems|automate workflows|turn data into decisions"
     ></span>
   </span>
   for data-driven teams.
