--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               rel="noreferrer"
             >
               <div class="project-tile__media">
-                <img src="assets/projects/nba-prospect.png" alt="NBA Prospect Evaluation Tool preview" />
+                <img src="assets/projects/nba-prospect.webp" alt="NBA Prospect Evaluation Tool preview" />
               </div>
               <div class="project-tile__overlay">
                 <div class="project-tile__meta">R • Shiny • Data Visualization</div>
@@ -271,7 +271,7 @@
               rel="noreferrer"
             >
               <div class="project-tile__media">
-                <img src="assets/projects/nfl-penalty.png" alt="NFL Penalty Margin and Win Analysis preview" />
+                <img src="assets/projects/nfl-penalty.webp" alt="NFL Penalty Margin and Win Analysis preview" />
               </div>
               <div class="project-tile__overlay">
                 <div class="project-tile__meta">R • Shiny • Sports Analytics</div>
@@ -283,48 +283,7 @@
               </div>
             </a>
 
-            <!-- Portfolio Value Creation Dashboard -->
-            <a
-              class="project-tile"
-              href="https://github.com/rishabhsxngh"
-              target="_blank"
-              rel="noreferrer"
-            >
-              <div class="project-tile__media">
-                <img src="assets/projects/portfolio-vc.png" alt="Portfolio Value Creation Dashboard preview" />
-              </div>
-              <div class="project-tile__overlay">
-                <div class="project-tile__meta">Python • Finance • Modeling</div>
-                <div class="project-tile__title">Portfolio Value Creation Dashboard</div>
-                <div class="project-tile__desc">
-                  Modeled revenue, margin, and EBITDA drivers across product lines, including pricing and cost sensitivity analyses with investor-style summaries.
-                </div>
-                <div class="project-tile__cta">View project →</div>
-              </div>
-            </a>
-
-            <!-- Good Karma Engineering -->
-            <a
-              class="project-tile"
-              href="https://www.linkedin.com/in/rishabhsingh2027"
-              target="_blank"
-              rel="noreferrer"
-            >
-              <div class="project-tile__media">
-                <img src="assets/projects/gke.png" alt="Good Karma Engineering preview" />
-              </div>
-              <div class="project-tile__overlay">
-                <div class="project-tile__meta">Non-profit • Leadership • 3D Printing</div>
-                <div class="project-tile__title">Good Karma Engineering</div>
-                <div class="project-tile__desc">
-                  Founded a non-profit delivering 3D printed prosthetics. Shipped 50+ functional arms and legs across the US, England, and India.
-                </div>
-                <div class="project-tile__cta">Learn more →</div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
+           
 
       <!-- ABOUT -->
       <section id="about" class="section">
