--- a/index.html
+++ b/index.html
@@ -214,74 +214,81 @@
         </div>
       </section>
 
-      <!-- PROJECTS -->
-      <section id="projects" class="section alt">
-        <div class="container">
-          <div class="section-head">
-            <h2>Projects</h2>
-            <p>Analytics tools, dashboards, and modeling work.</p>
+     <!-- PROJECTS -->
+<section id="projects" class="section alt">
+  <div class="container">
+    <div class="section-head">
+      <h2>Projects</h2>
+      <p>Analytics tools, dashboards, and modeling work.</p>
+    </div>
+
+    <div class="projects-grid">
+      <!-- SaaS Growth Analytics Dashboard -->
+      <a
+        class="project-tile"
+        href="https://github.com/rishabhsxngh/saas-growth-analytics-dashboard"
+        target="_blank"
+        rel="noreferrer"
+      >
+        <div class="project-tile__media">
+          <img src="assets/projects/saas-dashboard.png" alt="SaaS Growth Analytics Dashboard preview" />
+        </div>
+        <div class="project-tile__overlay">
+          <div class="project-tile__meta">Python • Streamlit • pandas • Plotly</div>
+          <div class="project-tile__title">SaaS Growth Analytics Dashboard</div>
+          <div class="project-tile__desc">
+            Executive overview with automated insights, cohort retention heatmaps, funnel conversion,
+            MRR waterfall, NRR, and churn risk signals.
           </div>
+          <div class="project-tile__cta">Open project →</div>
+        </div>
+      </a>
 
-          <div class="projects-grid">
-            <!-- SaaS Growth Analytics Dashboard -->
-            <a
-              class="project-tile"
-              href="https://github.com/rishabhsxngh/saas-growth-analytics-dashboard"
-              target="_blank"
-              rel="noreferrer"
-            >
-              <div class="project-tile__media">
-                <img src="assets/projects/saas-dashboard.png" alt="SaaS Growth Analytics Dashboard preview" />
-              </div>
-              <div class="project-tile__overlay">
-                <div class="project-tile__meta">Python • Streamlit • pandas • Plotly</div>
-                <div class="project-tile__title">SaaS Growth Analytics Dashboard</div>
-                <div class="project-tile__desc">
-                  Executive overview with automated insights, cohort retention heatmaps, funnel conversion, MRR waterfall, NRR, and churn risk signals.
-                </div>
-                <div class="project-tile__cta">Open project →</div>
-              </div>
-            </a>
+      <!-- NBA Prospect Evaluation Tool -->
+      <a
+        class="project-tile"
+        href="https://github.com/rishabhsxngh/nba-prospect-evaluation-tool"
+        target="_blank"
+        rel="noreferrer"
+      >
+        <div class="project-tile__media">
+          <img src="assets/projects/nba-prospect.webp" alt="NBA Prospect Evaluation Tool preview" />
+        </div>
+        <div class="project-tile__overlay">
+          <div class="project-tile__meta">R • Shiny • Data Visualization</div>
+          <div class="project-tile__title">NBA Prospect Evaluation Tool</div>
+          <div class="project-tile__desc">
+            Interactive scouting-style dashboard to explore shot quality, zone efficiency,
+            and player comparisons with clear visual storytelling.
+          </div>
+          <div class="project-tile__cta">View code →</div>
+        </div>
+      </a>
 
-            <!-- NBA Prospect Evaluation Tool -->
-            <a
-              class="project-tile"
-              href="https://github.com/rishabhsxngh/nba-prospect-evaluation-tool"
-              target="_blank"
-              rel="noreferrer"
-            >
-              <div class="project-tile__media">
-                <img src="assets/projects/nba-prospect.webp" alt="NBA Prospect Evaluation Tool preview" />
-              </div>
-              <div class="project-tile__overlay">
-                <div class="project-tile__meta">R • Shiny • Data Visualization</div>
-                <div class="project-tile__title">NBA Prospect Evaluation Tool</div>
-                <div class="project-tile__desc">
-                  Interactive scouting-style dashboard to explore shot quality, zone efficiency, and player comparisons with clear visual storytelling.
-                </div>
-                <div class="project-tile__cta">View code →</div>
-              </div>
-            </a>
+      <!-- NFL Penalty Margin & Win Analysis -->
+      <a
+        class="project-tile"
+        href="https://github.com/rishabhsxngh/NFL-Analysis"
+        target="_blank"
+        rel="noreferrer"
+      >
+        <div class="project-tile__media">
+          <img src="assets/projects/nfl-penalty.webp" alt="NFL Penalty Margin and Win Analysis preview" />
+        </div>
+        <div class="project-tile__overlay">
+          <div class="project-tile__meta">R • Shiny • Sports Analytics</div>
+          <div class="project-tile__title">NFL Penalty Margin & Win Analysis</div>
+          <div class="project-tile__desc">
+            Play-by-play analytics (2018–2023) including penalty margin vs win %, z-score outliers,
+            and team-level home/away splits.
+          </div>
+          <div class="project-tile__cta">View code →</div>
+        </div>
+      </a>
+    </div>
+  </div>
+</section>
 
-            <!-- NFL Penalty Margin & Win Analysis -->
-            <a
-              class="project-tile"
-              href="https://github.com/rishabhsxngh/NFL-Analysis"
-              target="_blank"
-              rel="noreferrer"
-            >
-              <div class="project-tile__media">
-                <img src="assets/projects/nfl-penalty.webp" alt="NFL Penalty Margin and Win Analysis preview" />
-              </div>
-              <div class="project-tile__overlay">
-                <div class="project-tile__meta">R • Shiny • Sports Analytics</div>
-                <div class="project-tile__title">NFL Penalty Margin & Win Analysis</div>
-                <div class="project-tile__desc">
-                  Play-by-play analytics (2018–2023) including penalty margin vs win %, z-score outliers, and team-level home/away splits.
-                </div>
-                <div class="project-tile__cta">View code →</div>
-              </div>
-            </a>
 
            
 
