--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="#experience">Experience</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
-          <a href="Singh_Rishabh_Resume(W25).pdf" target="_blank" rel="noreferrer">Resume</a>
+          <a href="RishabhSingh_Resume.pdf" target="_blank" rel="noreferrer">Resume</a>
           <a class="pill" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub</a>
         </nav>
       </div>
@@ -342,17 +342,21 @@
           </div>
 
           <div class="panel" style="margin-top: 14px;">
-            <h3>What I'm looking for</h3>
-            <p>
-              Internships and full-time roles in data science, analytics engineering, or software development.
-              I want to work on teams that ship data products and care about data quality, clean code, and measurable impact.
-            </p>
-            <p style="margin-bottom: 0;">
-              <strong>Interested in:</strong> Data Science, Analytics Engineering, Software Engineering<br />
-              <strong>Domains:</strong> Sports tech, fintech, enterprise SaaS, AI/ML infrastructure<br />
-              <strong>Based:</strong> Ann Arbor, MI / Long Island, NY
-            </p>
-          </div>
+  <h3>What I'm looking for</h3>
+  <p>
+    Data analyst roles focused on turning raw data into clear, actionable insights.
+    I’m interested in work that involves metric definition, exploratory analysis,
+    dashboarding, and communicating results to non-technical stakeholders.
+  </p>
+
+  <p style="margin-bottom: 0;">
+    <strong>Target roles:</strong> Data Analyst, Product Analyst, Business Analytics Intern<br />
+    <strong>Focus areas:</strong> SaaS metrics, retention & funnel analysis, operational reporting, experimentation support<br />
+    <strong>Domains:</strong> Enterprise SaaS, fintech, sports analytics, data platforms<br />
+    <strong>Based:</strong> Ann Arbor, MI / Long Island, NY
+  </p>
+</div>
+
         </div>
       </section>
 
@@ -361,11 +365,11 @@
         <div class="container">
           <div class="section-head">
             <h2>Contact</h2>
-            <p>Best way to reach me: email or LinkedIn.</p>
+            <p>Best way to reach me: rishps@umich.edu or LinkedIn.</p>
           </div>
 
           <div class="contact-row">
-            <a class="btn primary" href="mailto:rishps@umich.edu">Email me</a>
+            <a class="btn primary" href="mailto:rishps@umich.edu">Email Me @ rishps@umich.edu</a>
             <a class="btn" href="Singh_Rishabh_Resume(W25).pdf" target="_blank" rel="noreferrer">Resume</a>
             <a class="btn" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub</a>
             <a class="btn" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">LinkedIn</a>
