--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="hero">
         <div class="container hero-inner">
           <div>
-            <p class="kicker">Data Analyst • ETL Pipelines • Analytics Engineering</p>
+            <p class="kicker">Junior at The University of Michigan</p>
 
            <h1 class="headline">
   What’s up! I’m Rishabh Singh, and I
@@ -55,7 +55,7 @@
 
             <!-- Recruiter-facing role signal -->
             <p class="roleline">
-              <strong>Target roles:</strong> Data Science Intern · Analytics Engineering Intern · SWE (Data)
+              <strong>Target roles:</strong> Data Analyst | Product Analyst | Business Analytics Intern
             </p>
 
             <ul class="proof">
