--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 Experience with large-scale datasets, automation, and decision-focused analytics.
               </p>
               <p class="tldr-intent">
-                Seeking 2026 Summer Internships in Data Analytics or Software Engineering.
+                Seeking 2026 Summer Internships surrounding Data Analytics.
               </p>
 
               <!-- VERY VISIBLE STACK -->
